--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
     <head>
         <title>My Webpage</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body>
-        Hello, world!
+        <h1>Home Page</h1>
+        <div class="alert alert-success">
+            Hello, world!
+        </div>
     </body>
 </html>
