--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
         <h1>Home Page</h1>
         <div class="alert alert-success">
-            Hello, world!
+            Hello there, world! 
         </div>
     </body>
 </html>
