--- a/index.html
+++ b/index.html
@@ -1,13 +1,192 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Hello World!</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
-    <body>
-        <h1>Home Page</h1>
-        <div class="alert alert-success">
-            Hello there, world! 
+
+<head>
+    <title>BGP – Home</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+
+<body>
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="index.html">
+            <img src="https://biblicalgreekprogram.org/PWA/BGP_2020/icons/120-android-icon.png" width="30" height="30"
+                class="d-inline-block align-top" alt="">
+            Biblical Greek Program
+        </a>
+        <div class="nav">
+            <a class="nav-item nav-link" href="resources.html">Resources</a>
+            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link" href="faq.html">FAQ</a>
         </div>
-    </body>
+    </nav>
+    <div class="main">
+        <div class="jumbotron">
+            <h1 class="display-4">Biblical Greek Program</h1>
+            <h2>UP TO 2 YEARS OF BIBLICAL GREEK</h2>
+            <p class="lead">Immerse yourself in the language of the New Testament. The combination of intense, 10-day
+                immersion classes, and 15-week online classes taught via video conferencing maximizes the benefits of
+                both classroom and online learning using communicative methods at an <a href="#tuition">affordable
+                    tuition</a>.</p>
+            <hr class="my-4">
+            <p>Check out our most popular classes here at the BGP.</p>
+            <a class="btn btn-primary btn-lg" href="#classes" role="button">Classes</a>
+            <a class="btn btn-secondary btn-lg" href="#learnMore" role="button">Learn More</a>
+        </div>
+
+        <div id="learnMore">
+            <h3>Language Learning That Works</h3>
+            <blockquote class="blockquote text-center">
+                    <h4 class="material-icons">format_quote</h4>
+                    <p class="mb-0">"I’ve studied NT Greek using the “grammar-translation” method for years, but this communicative course was fantastic for me. This method enables students to actually internalize the language and think of it as a real language, not as a mathematical code to be cracked. I highly recommend it for everyone–from beginners to those who’ve studied Greek grammars and done parsing exercises for years. Five stars."</p>
+                    <footer class="blockquote-footer">Paul L.</footer>
+              </blockquote>
+            <ul>
+                <li><span class="material-icons">trending_up</span>
+                    <h4>Ideal Language Learning Environment</h4>
+                    <p>These classes immerse the student in a Biblical Greek language-learning environment taught almost
+                        exclusively in Biblical Greek.</p>
+                </li>
+                <li>
+                    <span class="material-icons">language</span>
+                    <h4>Study From Anywhere In The World</h4>
+                    <p>The online classes utilize technology allowing you to continue communicative Greek studies from
+                        anywhere in the world.</p>
+                </li>
+                <li><span class="material-icons">waves</span>
+                    <h4>Flexible</h4>
+                    <p>These classes are for beginners as well as for those who have studied Greek for years. Sign up
+                        for as
+                        much or as little of the program as you desire.</p>
+                </li>
+            </ul>
+            <a href="#classes" class="btn btn-primary">Join A Class!</a>
+        </div>
+
+
+        <div id="classes">
+            <h3>Basic Class Packages</h3>
+            <p>Here are three common packages that students start with. You can sign up for as much or as little as you would like to start out with, then book more as you decide to dig deeper into Biblical Greek. All classes are at an <a href="#tuition">affordable
+                tuition</a>.</p>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">1st Immersion of the BGP</h5>
+                                <p class="card-text">Start by signing up for this intense 10-day immersion course. Learn to interact with the Greek text through role-plays, storytelling, and much more. This is the first level (Level 1A) of the Biblical Greek Program, so you will be all set to continue studying online afterwards.</p>
+                                <a href="#" class="btn btn-primary">Book This Class</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">1 Year of the BGP</h5>
+                                <p class="card-text">Enjoy the stories and role-plays in year 1 of the Biblical Greek Program. You will start with a 10-day immersion, which is followed by a 15-week class of online video conferencing. The year is completed with another action-packed 10-day immersion. You did it!</p>
+                                <a href="#" class="btn btn-primary">Book This Class</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-12">
+                        <div class="card">
+                            <div class="card-body">
+                                <h5 class="card-title">2 Year of the BGP</h5>
+                                <p class="card-text">Sign up for two years of Biblical Greek immersion. Grammar comes to life as you immerse yourself in stories from Acts and the epistle to the Galatians. The two years finish with another immersion class full of role-plays, interactive grammar drills, and speeches. Congratulations!</p>
+                                <a href="#" class="btn btn-primary">Book This Class</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="tuition">
+            <h3>Tuition</h3>
+            <p>Sign up for as much or as little of the Biblical Greek Program as you want to participate in. However, every Level has the previous Levels as prerequisites.</p>
+            <p>When you sign up for Year 1, you are signing up for two immersion courses and one online course. Those two immersion courses and that one online course are roughly equivalent to two college semesters. These three components constitute one full year of Greek. Year 2 is similar to Year 1. By signing up for Year 2 you are signing up for two online courses and one immersion course at the end.</p>
+            <table class="table">
+                <thead class="thead-light">
+                    <tr>
+                        <th>Year 1</th>
+                        <th>Class | Homework</th>
+                        <th>Tuition</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>Level 1A – Immersion</td>
+                    <td>45 hours | 30 hours</td>
+                    <td>$600</td>
+                </tr>
+                <tr>
+                    <td>Level 1B – Online</td>
+                    <td>45 hours | 75 hours</td>
+                    <td>$600</td>
+                </tr>
+                <tr>
+                    <td>Level 1C – Immersion</td>
+                    <td>45 hours | 30 hours</td>
+                    <td>$600</td>
+                </tr>
+                <thead class="thead-light">
+                    <tr>
+                        <th>Year 2</th>
+                        <th>Class | Homework</th>
+                        <th>Tuition</th>
+                    </tr>
+                </thead>
+                <tr>
+                    <td>Level 2A – Online</td>
+                    <td>45 hours | 75 hours</td>
+                    <td>$600</td>
+                </tr>
+                <tr>
+                    <td>Level 2B – Online</td>
+                    <td>45 hours | 75 hours</td>
+                    <td>$600</td>
+                </tr>
+                <tr>
+                    <td>Level 2C – Immersion</td>
+                    <td>45 hours | 30 hours</td>
+                    <td>$600</td>
+                </tr>
+            </table>
+            <p>Check out the base package that we offer!</p>
+            <a href="#classes" class="btn btn-primary">Basic Packages</a>
+            <a href="resources.html" class="btn btn-secondary">Helpful Resources</a>
+        </div>
+    </div>
+    <div class="footer p-3 bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <h3>Join A Class Today</h3>
+                    <p>Start your Biblical Greek studies by taking our beginners' course in a communicative, comprehension-led environment. Join us in the Biblical Greek Program even if you have already studied a year or two of Biblical Greek and simply want to become better at reading the Greek New Testament.</p>
+                    <a href="#classes" class="btn btn-primary">Join A Class</a>
+                    <a href="about.html" class="btn btn-secondary">More About The BGP</a>
+                </div>
+                <div class="col-lg-6">
+                    <h3>Sign Up For Our Newsletter</h3>
+                    <form>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">First name</label>
+                          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="First name">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputPassword1">Last name</label>
+                          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Last name">
+                        </div>
+                        <div class="form-group">
+                          <label for="exampleInputEmail1">Email address</label>
+                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</body>
 </html>
