fixed typo on version one

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="card">
                             <div class="card-body">
-                                <h5 class="card-title">2 Year of the BGP</h5>
+                                <h5 class="card-title">2 Years of the BGP</h5>
                                 <p class="card-text">Sign up for two years of Biblical Greek immersion. Grammar comes to life as you immerse yourself in stories from Acts and the epistle to the Galatians. The two years finish with another immersion class full of role-plays, interactive grammar drills, and speeches. Congratulations!</p>
                                 <a href="#" class="btn btn-primary">Book This Class</a>
                             </div>
