Project description; Bootstrap modal on resource page

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>BGP – Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -44,18 +45,18 @@
                     <footer class="blockquote-footer">Paul L.</footer>
               </blockquote>
             <ul>
-                <li><span class="material-icons">trending_up</span>
+                <li><span class="custom material-icons">trending_up</span>
                     <h4>Ideal Language Learning Environment</h4>
                     <p>These classes immerse the student in a Biblical Greek language-learning environment taught almost
                         exclusively in Biblical Greek.</p>
                 </li>
                 <li>
-                    <span class="material-icons">language</span>
+                    <span class="custom material-icons">language</span>
                     <h4>Study From Anywhere In The World</h4>
                     <p>The online classes utilize technology allowing you to continue communicative Greek studies from
                         anywhere in the world.</p>
                 </li>
-                <li><span class="material-icons">waves</span>
+                <li><span class="custom material-icons">waves</span>
                     <h4>Flexible</h4>
                     <p>These classes are for beginners as well as for those who have studied Greek for years. Sign up
                         for as
