--- a/resources.html
+++ b/resources.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>BGP – Resources</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -29,7 +30,7 @@
               <p class="lead">This page features resources that you will find helpful as you study Biblical Greek.</p>
             </div>
           </div>
-          <a onclick="alert('This will display a QR code to install the PWA to a phone.')"><div class="text-center alert alert-primary">Click here to install the BGP app to your device!</div></a>
+          <a id='mobile-off' onclick="alert('This will display a QR code to install the PWA to a phone.')"><div class="text-center alert alert-primary">Click here to install the BGP app to your device!</div></a>
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-lg-4">
