--- a/resources.html
+++ b/resources.html
@@ -8,6 +8,9 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -17,27 +20,54 @@
             class="d-inline-block align-top" alt="">
         Biblical Greek Program
         </a>
-        <div class="nav">
-            <a class="nav-item nav-link" href="#">Resources</a>
-            <a class="nav-item nav-link" href="about.html">About</a>
-            <a class="nav-item nav-link" href="faq.html">FAQ</a>
-        </div>
+        <a class="nav-item nav-link" href="#">Resources</a>
+        <a class="nav-item nav-link" href="about.html">About</a>
+        <a class="nav-item nav-link" href="faq.html">FAQ</a>
     </nav>
     <div class="main">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
-              <h1 class="display-4">Helpful Resources</h1>
-              <p class="lead">This page features resources that you will find helpful as you study Biblical Greek.</p>
+                <h1 class="display-4">Helpful Resources</h1>
+                <p class="lead">This page features resources that you will find helpful as you study Biblical Greek.</p>
             </div>
-          </div>
-          <a id='mobile-off' onclick="alert('This will display a QR code to install the PWA to a phone.')"><div class="text-center alert alert-primary">Click here to install the BGP app to your device!</div></a>
+        </div>
+
+        <div id='mobile-off' type="button" class="text-center alert alert-primary" data-toggle="modal" data-target="#exampleModalCenter">Click here to install the BGP study app to your device!</div>
+        <!-- Button trigger modal -->
+        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
+            Launch demo modal
+        </button> -->
+
+        <!-- Modal -->
+        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+            aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalCenterTitle">Mobile BGP App</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        This would contain a QR code to scan and download the study app to a mobile device. Naturally, if you are already on a mobile device you would not need to scan to install the app. Therefore, this modal only shows on a non-mobile device.
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary">Save changes</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 col-lg-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">LKG Part One</h5>
-                            <p class="card-text">LKG Part One is a picture book with accompanying audio from the Biblical
+                            <p class="card-text">LKG Part One is a picture book with accompanying audio from the
+                                Biblical
                                 Language Center.</p>
                             <a href="https://www.biblicallanguagecenter.com/product/living-koine-greek/"
                                 class="btn btn-primary">Buy Now!</a>
@@ -48,7 +78,8 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">LKG Part Two-A</h5>
-                            <p class="card-text">LKG Part Two-A is a kind of "home language lab" including drills and audio
+                            <p class="card-text">LKG Part Two-A is a kind of "home language lab" including drills and
+                                audio
                                 accompaniment.</p>
                             <a href="https://www.biblicallanguagecenter.com/product/lkg-introduction-part-two-0/"
                                 class="btn btn-primary">Buy Now!</a>
@@ -59,21 +90,22 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Reading Koine Greek</h5>
-                            <p class="card-text">Reading Koine Greek is the textbook used for both Year 1 and Year 2 of the
+                            <p class="card-text">Reading Koine Greek is the textbook used for both Year 1 and Year 2 of
+                                the
                                 Biblical Greek Program.</p>
                             <a href="https://www.amazon.com/dp/B015OP233C/ref=dp-kindle-redirect?_encoding=UTF8&btkr=1"
                                 class="btn btn-primary">Buy Now!</a>
                         </div>
                     </div>
                 </div>
-                
+
                 <div class="col-sm-6 col-lg-4">
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Discourse Grammar of the Greek NT</h5>
-                            <p class="card-text">Discourse Grammar of the Greek New Testament is a practical introduction for teaching and exegesis by Steven E. Runge.</p>
-                            <a href="https://amzn.to/2tyLDrj"
-                                class="btn btn-primary">Buy Now!</a>
+                            <p class="card-text">Discourse Grammar of the Greek New Testament is a practical
+                                introduction for teaching and exegesis by Steven E. Runge.</p>
+                            <a href="https://amzn.to/2tyLDrj" class="btn btn-primary">Buy Now!</a>
                         </div>
                     </div>
                 </div>
@@ -81,9 +113,10 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Beginning Readers GNT Byzantine Textform</h5>
-                            <p class="card-text">This Greek New Testament is specially designed for beginners. Footnotes contain brief definitions of words occurring less than fifty times, and show how to parse all verbs occurring less than fifty times.</p>
-                            <a href="https://amzn.to/2MUkN5M"
-                                class="btn btn-primary">Buy Now!</a>
+                            <p class="card-text">This Greek New Testament is specially designed for beginners. Footnotes
+                                contain brief definitions of words occurring less than fifty times, and show how to
+                                parse all verbs occurring less than fifty times.</p>
+                            <a href="https://amzn.to/2MUkN5M" class="btn btn-primary">Buy Now!</a>
                         </div>
                     </div>
                 </div>
@@ -91,7 +124,10 @@
                     <div class="card">
                         <div class="card-body">
                             <h5 class="card-title">Greek & Hebrew Discoverer</h5>
-                            <p class="card-text">Accordance Bible Software is a great tools for any serious student of scripture and the Biblical languages. This package has resources such as Louw & Nida and the tagged Septuagint that will be of great help as you dig deep into the Greek Scriptures.</p>
+                            <p class="card-text">Accordance Bible Software is a great tools for any serious student of
+                                scripture and the Biblical languages. This package has resources such as Louw & Nida and
+                                the tagged Septuagint that will be of great help as you dig deep into the Greek
+                                Scriptures.</p>
                             <a href="https://www.accordancebible.com/store/details?pid=Coll12-GrHebDiscover"
                                 class="btn btn-primary">Buy Now!</a>
                         </div>
@@ -105,7 +141,10 @@
             <div class="row">
                 <div class="col-lg-6">
                     <h3>Join A Class Today</h3>
-                    <p>Start your Biblical Greek studies by taking our beginners' course in a communicative, comprehension-led environment. Join us in the Biblical Greek Program even if you have already studied a year or two of Biblical Greek and simply want to become better at reading the Greek New Testament.</p>
+                    <p>Start your Biblical Greek studies by taking our beginners' course in a communicative,
+                        comprehension-led environment. Join us in the Biblical Greek Program even if you have already
+                        studied a year or two of Biblical Greek and simply want to become better at reading the Greek
+                        New Testament.</p>
                     <a href="#classes" class="btn btn-primary">Join A Class</a>
                     <a href="about.html" class="btn btn-secondary">More About The BGP</a>
                 </div>
@@ -113,20 +152,22 @@
                     <h3>Sign Up For Our Newsletter</h3>
                     <form>
                         <div class="form-group">
-                          <label for="exampleInputPassword1">First name</label>
-                          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="First name">
+                            <label for="exampleInputPassword1">First name</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="First name">
                         </div>
                         <div class="form-group">
-                          <label for="exampleInputPassword1">Last name</label>
-                          <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Last name">
+                            <label for="exampleInputPassword1">Last name</label>
+                            <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Last name">
                         </div>
                         <div class="form-group">
-                          <label for="exampleInputEmail1">Email address</label>
-                          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                            <label for="exampleInputEmail1">Email address</label>
+                            <input type="email" class="form-control" id="exampleInputEmail1"
+                                aria-describedby="emailHelp" placeholder="Enter email">
+                            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone
+                                else.</small>
                         </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
-                      </form>
+                    </form>
                 </div>
             </div>
         </div>
