http to https fix in resource.html

--- a/about.html
+++ b/about.html
@@ -16,9 +16,11 @@
             <img src="https://biblicalgreekprogram.org/PWA/BGP_2020/icons/120-android-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Biblical Greek Program
         </a>
-        <a class="nav-item nav-link" href="resources.html">Resources</a>
-        <a class="nav-item nav-link" href="#">About</a>
-        <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        <div class="nav">
+            <a class="nav-item nav-link" href="resources.html">Resources</a>
+            <a class="nav-item nav-link" href="#">About</a>
+            <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        </div>
     </nav>
     <div class="main">
         <div class="jumbotron jumbotron-fluid">
