--- a/resources.html
+++ b/resources.html
@@ -20,9 +20,11 @@
             class="d-inline-block align-top" alt="">
         Biblical Greek Program
         </a>
-        <a class="nav-item nav-link" href="#">Resources</a>
-        <a class="nav-item nav-link" href="about.html">About</a>
-        <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        <div class="nav">
+            <a class="nav-item nav-link" href="#">Resources</a>
+            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        </div>
     </nav>
     <div class="main">
         <div class="jumbotron jumbotron-fluid">
