--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
                 class="d-inline-block align-top" alt="">
             Biblical Greek Program
         </a>
-        <a class="nav-item nav-link" href="resources.html">Resources</a>
-        <a class="nav-item nav-link" href="about.html">About</a>
-        <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        <div class="nav">
+            <a class="nav-item nav-link" href="resources.html">Resources</a>
+            <a class="nav-item nav-link" href="about.html">About</a>
+            <a class="nav-item nav-link" href="faq.html">FAQ</a>
+        </div>
     </nav>
     <div class="main">
         <div class="jumbotron">
