first commit on new branch

--- a/resources.html
+++ b/resources.html
@@ -55,8 +55,8 @@
                         This would contain a QR code to scan and download the study app to a mobile device. Naturally, if you are already on a mobile device you would not need to scan to install the app. Therefore, this modal only shows on a non-mobile device.
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary">Save changes</button>
+                        <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                        <!-- <button type="button" class="btn btn-primary">Save changes</button> -->
                     </div>
                 </div>
             </div>
