add margin to alert element for space on mobile

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark"">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
         <a class=" navbar-brand" href="index.html">
             <img src="https://biblicalgreekprogram.org/PWA/BGP_2020/icons/120-android-icon.png" width="30" height="30" class="d-inline-block align-top" alt="">
             Biblical Greek Program
@@ -22,6 +22,7 @@
             <a class="nav-item nav-link" href="faq.html">FAQ</a>
         </div>
     </nav>
+
     <div class="main">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -30,6 +31,7 @@
                 </p>
             </div>
         </div>
+
         <div class="container">
             <h3>Objectives of the BGP</h3>
             <div class="row">
@@ -39,8 +41,7 @@
                         <p>Even if you only take the first immersion class, you will have a solid foundation that will
                             help you as you continue to study Biblical Greek.</p>
                     </li>
-                    <li>
-                        <span class="material-icons">check</span>
+                    <li><span class="material-icons">check</span>
                         <h4>Learn Biblical Greek communicatively</h4>
                         <p>Learn the language through interacting in it with stories, skits, role-plays, and Total
                             Physical Response activities. Immerse yourself in Biblical Greek communicatively. </p>
@@ -70,6 +71,7 @@
                 </ul>
             </div>
         </div>
+
         <div class="container">
             <h3>Why Study With Us?</h3>
             <div class="row">
@@ -79,8 +81,7 @@
                         <p>Even if you only take the first immersion class, you will have a solid foundation that will
                             help you as you continue to study Biblical Greek.</p>
                     </li>
-                    <li>
-                        <span class="material-icons">check</span>
+                    <li><span class="material-icons">check</span>
                         <h4>Learn Biblical Greek communicatively</h4>
                         <p>Learn the language through interacting in it with stories, skits, role-plays, and Total
                             Physical Response activities. Immerse yourself in Biblical Greek communicatively. </p>
@@ -111,6 +112,7 @@
             <footer class="blockquote-footer">Emanuel K.</footer>
         </blockquote>
     </div>
+
     <div class="footer p-3 bg-light">
         <div class="container">
             <div class="row">
