--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a class="nav-item nav-link" href="faq.html">FAQ</a>
         </div>
     </nav>
+
     <div class="main">
         <div class="jumbotron">
             <h1 class="display-4">Biblical Greek Program</h1>
@@ -50,8 +51,7 @@
                     <p>These classes immerse the student in a Biblical Greek language-learning environment taught almost
                         exclusively in Biblical Greek.</p>
                 </li>
-                <li>
-                    <span class="custom material-icons">language</span>
+                <li><span class="custom material-icons">language</span>
                     <h4>Study From Anywhere In The World</h4>
                     <p>The online classes utilize technology allowing you to continue communicative Greek studies from
                         anywhere in the world.</p>
@@ -103,6 +103,7 @@
                 </div>
             </div>
         </div>
+
         <div id="tuition">
             <h3>Tuition</h3>
             <p>Sign up for as much or as little of the Biblical Greek Program as you want to participate in. However, every Level has the previous Levels as prerequisites.</p>
@@ -157,7 +158,9 @@
             <a href="#classes" class="btn btn-primary">Basic Packages</a>
             <a href="resources.html" class="btn btn-secondary">Helpful Resources</a>
         </div>
+        
     </div>
+
     <div class="footer p-3 bg-light">
         <div class="container">
             <div class="row">
