--- a/resources.html
+++ b/resources.html
@@ -26,6 +26,7 @@
             <a class="nav-item nav-link" href="faq.html">FAQ</a>
         </div>
     </nav>
+
     <div class="main">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -34,12 +35,9 @@
             </div>
         </div>
 
-        <div id='mobile-off' type="button" class="text-center alert alert-primary" data-toggle="modal" data-target="#exampleModalCenter">Click here to install the BGP study app to your device!</div>
-        <!-- Button trigger modal -->
-        <!-- <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalCenter">
-            Launch demo modal
-        </button> -->
-
+        <div id='mobile-off' type="button" class="text-center alert alert-primary" data-toggle="modal" data-target="#exampleModalCenter">
+            Click here to install the BGP study app to your device!
+        </div>
         <!-- Modal -->
         <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
             aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
@@ -138,6 +136,7 @@
             </div>
         </div>
     </div>
+    
     <div class="footer p-3 bg-light">
         <div class="container">
             <div class="row">
