--- a/faq.html
+++ b/faq.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark"">
+    <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
             <a class=" navbar-brand" href="index.html">
         <img src="https://biblicalgreekprogram.org/PWA/BGP_2020/icons/120-android-icon.png" width="30" height="30"
             class="d-inline-block align-top" alt="">
@@ -25,6 +25,7 @@
           <a class="nav-item nav-link" href="#">FAQ</a>
         </div>
     </nav>
+
     <div class="main">
         <div class="jumbotron jumbotron-fluid">
             <div class="container">
@@ -32,7 +33,8 @@
               <p class="lead">This page features several frequently asked questions.</p>
               <a class="btn btn-primary btn-lg" href="#ask" role="button">Ask a question</a>
             </div>
-          </div>
+        </div>
+
         <div class="container">
             <div class="row">
                 <div class="column col-lg-6">
@@ -98,7 +100,7 @@
                           </div>
                         </div>
             
-                      </div>
+                    </div>
                 </div>
                 <div class="column col-lg-6">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/c/c4/Z%C3%BCnd_Gang_nach_Emmaus_1877.jpg">
@@ -106,6 +108,7 @@
                 </div>
             </div>
         </div>
+
         <div id="ask">
             <h3>Ask Your Question</h3>
             <form>
@@ -122,6 +125,7 @@
               </form>
         </div>
     </div>
+
     <div class="footer p-3 bg-light">
         <div class="container">
             <div class="row">
